aws/textatow_infra-production/vpc.tf
### Network

# Fetch AZs in the current region
data "aws_availability_zones" "available" {}

resource "aws_vpc" "production_main" {
  cidr_block = "172.18.0.0/16"
  tags = {
    Name = "tf-production-textatow"
  }
}

# Create var.az_count private subnets, each in a different AZ
resource "aws_subnet" "production_private" {
  count             = "2"
  cidr_block        = "${cidrsubnet(aws_vpc.production_main.cidr_block, 8, count.index)}"
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id            = "${aws_vpc.production_main.id}"
  tags = {
    Name = "private tf-production-textatow"
  }
}

# Create var.az_count public subnets, each in a different AZ
resource "aws_subnet" "production_public" {
  count                   = "2"
  cidr_block              = "${cidrsubnet(aws_vpc.production_main.cidr_block, 8, 2 + count.index)}"
  availability_zone       = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id                  = "${aws_vpc.production_main.id}"
  map_public_ip_on_launch = true
  tags = {
    Name = "public tf-production-textatow"
  }
}

# IGW for the public subnet
resource "aws_internet_gateway" "production_gw" {
  vpc_id = "${aws_vpc.production_main.id}"
  tags = {
    Name = "tf-production-textatow"
  }
}

# Route the public subnet traffic through the IGW
resource "aws_route" "production_internet_access" {
  route_table_id         = "${aws_vpc.production_main.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.production_gw.id}"
}

# Create a NAT gateway with an EIP for each private subnet to get internet connectivity
resource "aws_eip" "production_gw" {
  count      = "2"
  domain     = "vpc"
  tags = {
    Name = "tf-production-textatow"
  }
  depends_on = [aws_internet_gateway.production_gw]
}

resource "aws_nat_gateway" "production_gw" {
  count         = "2"
  subnet_id     = "${element(aws_subnet.production_public.*.id, count.index)}"
  allocation_id = "${element(aws_eip.production_gw.*.id, count.index)}"
  tags = {
    Name = "tf-production-textatow"
  }
}

# Create a new route table for the private subnets
# And make it route non-local traffic through the NAT gateway to the internet
resource "aws_route_table" "production_private" {
  count  = "2"
  vpc_id = "${aws_vpc.production_main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "${element(aws_nat_gateway.production_gw.*.id, count.index)}"
  }
  
  tags = {
    Name = "private-tf-production-textatow"
  }
}

# Explicitely associate the newly created route tables to the private subnets (so they don't default to the main route table)
resource "aws_route_table_association" "production_private" {
  count          = "2"
  subnet_id      = "${element(aws_subnet.production_private.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.production_private.*.id, count.index)}"
}
